# WomenInChina100YearsAgo

./: .env.example  .gitignore  CLAUDE.md  README.md  compose.yaml  pyproject.toml
artifacts/benchmark-pages/: render_manifest.jsonl  summary.json
artifacts/benchmark-review/: annotations.json
artifacts/benchmark-sample/: candidate_pages.csv  summary.json
artifacts/claim-smoke/: v219-p0308.claims.json
artifacts/corpus-audit/: manifest.csv  manifest.jsonl  summary.json
artifacts/e2e/: holbein-v219-p0308.ner.json  holbein-v219-p0308.qwen35-08b.json  holbein-v219-p0308.qwen35-4b.json  holbein-v219-p0308.qwen35-4b.ollama-0.32.1-mtp.json  holbein-v219-p0308.qwen35-4b.ollama-0.32.1.json  holbein-v219-p0308.qwen36-35b.json
artifacts/eval-pilot/: dense.json  hybrid.json  lexical.json
artifacts/eval-smoke/: dense.json  hybrid.json  lexical.json
artifacts/frontier-pilot/: p0308.json  p0308.ocr.json
artifacts/link-smoke/: v219-p0308.links.json
artifacts/lossless-pilot/: lossless_manifest.jsonl  summary.json
artifacts/ner-pilot/: comparison-lossless-first50.json  v219-p0308.lossless.gliner-multi-v2.1.first50.json  v219-p0308.lossless.gliner-x.first50.json  v219-p0308.lossless.qwen35-08b.first10.json  v219-p0308.lossless.rules.json
artifacts/ner-smoke/: comparison-first50.json  glm47-flash.json  qwen36-35b-a3b.json  qwen36-35b-a3b.leak-free.prompt-v2.json  qwen36-35b-a3b.leak-free.schema-grounded.json  qwen36-35b-a3b.schema-grounded.json  v219-p0308.gliner-multi-v2.1.first50.json  v219-p0308.gliner-multi-v2.1.json  v219-p0308.gliner-x-large.first50.json  v219-p0308.rules.json
artifacts/ocr-challenger/: v219-p0308.central-theatre.comparison.json  v219-p0308.review-ledger.json  v219-p0308.targeted-suite.json
artifacts/ocr-pilot/: v219-p0308.lossless.ppocrv6.json
artifacts/ocr-smoke/: v219-p0308.ppocrv6.json
artifacts/rag-pilot/: citations.jsonl  documents.jsonl  experiment-manifest.json
artifacts/rag-smoke/: citations.jsonl  documents.jsonl  experiment-manifest.json
config/: historical-synonyms.toml  pipeline-models.toml
db/migrations/: 001_evidence_schema.sql  002_review_workflow_indexes.sql  003_claim_review_index.sql  004_page_derivatives.sql  005_ocr_run_selection.sql  006_ner_run_input.sql  007_ingestion_jobs.sql  008_batch_terminal_states.sql  009_job_replay_events.sql  010_article_segmentation_review.sql  011_segmentation_span_splits.sql  012_coherent_unit_provenance_guards.sql  013_segmentation_action_idempotency.sql  014_ingestion_entity_link_stage.sql  015_e2e_evidence_identity_events.sql  016_layout_ingestion_stage.sql  017_reviewed_text_semantic_runs.sql  018_semantic_discovery_task.sql  019_batch_identity_resolution.sql  020_identity_candidate_model_runs.sql  021_authoritative_visual_outputs_local_identity.sql  022_coherent_unit_article_search.sql
docs/: annotation-guidelines.md  coherent-unit-search-operations.md  corpus-audit.md  e2e-pipeline-contract.md  end-to-end-holbein-example.md  entity-schema-v0.1.md  extraction-and-identity-resolution-decision.md  extraction-contract-v2.md  generation-operations.md  gold-annotation-packets.md  ingestion-operations.md  objective-status.md  segmentation-operations.md  technical-design.md  technology-research.md
environments/hunyuan-ocr/: README.md  requirements.txt
experiments/e2e/: holbein_v219_p0308.py  load_holbein_candidates.py
experiments/generation/: README.md  benchmark-spec.json
experiments/ner/: README.md  benchmark-spec.json  candidates.json  decision-memo.md  llm_candidate_smoke.py  mmbert-tokenizer-offset-qualification.json  tokenizer-offset-fixture-v1.json
experiments/ocr/: README.md  block_xycut.py  boundary_hough.py  boundary_lines.py  compose_blocks.py  display_crop_validation.py  frame_rectangles.py  hunyuan_transformers_layout_smoke.py  hunyuanocr-1.5-hardware.md  hunyuanocr-1.5-pilot.md  hunyuanocr-1.5-targeted-suite.md  llamacpp_hunyuan_smoke.py  region_cell_geometry.py  region_crop_validation.py  region_proposal_geometry.py  rlsa_blocks.py  rule_attributes.py  rule_detector.py  stroke_taxonomy.py
experiments/rag/: README.md  requirements-graphrag.txt  requirements-lightrag.txt
experiments/relation/: README.md  benchmark-spec.json  candidates.json
experiments/retrieval/: README.md  lossless-pilot-questions.jsonl  smoke-questions.jsonl
src/wic_history/: __init__.py  api.py  article_embedding.py  article_embedding_contracts.py  article_embedding_store.py  article_embedding_vectors.py  benchmark_sample.py  claim_context.py  coherent_api_search.py  coherent_job_database.py  coherent_job_embedding.py  coherent_job_hashing.py  coherent_job_projection.py  coherent_job_projection_execution.py  coherent_job_validation.py  coherent_jobs.py  coherent_search.py  coherent_search_cli.py  coherent_search_contracts.py  coherent_search_documents.py  coherent_search_projection.py  evidence.py  (+65 more)
tests/: coherent_search_fake_filters.py  coherent_search_fake_models.py  coherent_search_support.py  conftest.py  test_api.py  test_article_embedding.py  test_article_embedding_postgres.py  test_article_embedding_runtime.py  test_benchmark_sample.py  test_claim_context.py  test_coherent_jobs.py  test_coherent_search.py  test_coherent_search_projection.py  test_coherent_search_retrieval.py  test_coherent_search_wire.py  test_corpus_manifest.py  test_database_contract.py  test_difficult_ocr.py  test_e2e_holbein.py  test_e2e_pipeline_semantics.py  test_e2e_store.py  test_embedding_pipeline.py  test_entity_resolution.py  test_evaluation.py  test_evidence.py  test_exploration.py  test_frontier_extraction.py  test_generation.py  test_generation_benchmark.py  test_gold_packet.py  test_gold_render.py  test_graph.py  test_identity_batch.py  test_identity_models.py  test_ingestion_jobs.py  test_ingestion_worker.py  test_insights.py  test_layout_pipeline.py  test_legacy_embedding_writer_postgres.py  test_link_pipeline.py  (+27 more)
(+82 files in other folders)
