[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "women-in-china-history"
version = "0.1.0"
description = "Evidence-first processing tools for the Women in China 100 Years Ago project"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34,<2",
  "Pillow>=11,<13",
  "pydantic>=2.11,<3",
  "PyMuPDF>=1.26,<2",
]

[project.optional-dependencies]
api = ["fastapi>=0.116,<1", "uvicorn[standard]>=0.35,<1"]
data = [
  "neo4j>=6.0,<7",
  "opensearch-py>=3.0,<4",
  "psycopg[binary]>=3.2,<4",
  "SQLAlchemy>=2.0,<3",
]
ner = ["gliner[stanza]>=0.2.27,<0.3", "sentence-transformers>=5.0,<6"]
ocr = ["paddleocr==3.7.0", "paddlepaddle==3.3.1"]
test = ["httpx>=0.28,<1", "pytest>=8.4,<9"]

[project.scripts]
wic-corpus = "wic_history.corpus_manifest:main"
wic-sample = "wic_history.benchmark_sample:main"
wic-render = "wic_history.render_samples:main"
wic-gold-render = "wic_history.gold_render:main"
wic-review = "wic_history.review_server:main"
wic-ocr = "wic_history.ocr_pipeline:main"
wic-ocr-score = "wic_history.ocr_gold:main"
wic-migrate = "wic_history.migrate:main"
wic-ingest = "wic_history.repository:main"
wic-search = "wic_history.search:main"
wic-ner = "wic_history.ner_pipeline:main"
wic-embed = "wic_history.embedding_pipeline:main"
wic-graph = "wic_history.graph:main"
wic-api = "wic_history.api:main"
wic-link = "wic_history.link_pipeline:main"
wic-relations = "wic_history.relation_pipeline:main"
wic-rag-export = "wic_history.rag_experiment:main"
wic-segment = "wic_history.segmentation:main"
wic-eval = "wic_history.evaluation:main"
wic-rag-adapter = "wic_history.rag_adapters:main"
wic-ner-compare = "wic_history.ner_compare:main"
wic-ner-score = "wic_history.ner_gold:main"
wic-ner-benchmark = "wic_history.ner_benchmark:main"
wic-ner-benchmark-compare = "wic_history.ner_benchmark_compare:main"
wic-generation-benchmark = "wic_history.generation_benchmark:main"
wic-relation-benchmark = "wic_history.relation_benchmark:main"
wic-gold-packet = "wic_history.gold_packet:main"
wic-batch = "wic_history.ingestion_jobs:main"
wic-worker = "wic_history.ingestion_worker:main"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wic_history = ["static/*"]
